Update to current Spring Boot version (checked compatibility with Java SDK 21)