@@ -20,7 +20,8 @@ import static jakarta.ws.rs.core.MediaType.APPLICATION_JSON;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 
 import org.glassfish.jersey.client.ClientConfig;
@@ -32,31 +33,31 @@ import jakarta.ws.rs.core.GenericType;
 
 public class ServerUtils {
 
-    private static final String SERVER = "http://localhost:8080/";
+	private static final String SERVER = "http://localhost:8080/";
 
-    public void getQuotesTheHardWay() throws IOException {
-        var url = new URL("http://localhost:8080/api/quotes");
-        var is = url.openConnection().getInputStream();
-        var br = new BufferedReader(new InputStreamReader(is));
-        String line;
-        while ((line = br.readLine()) != null) {
-            System.out.println(line);
-        }
-    }
+	public void getQuotesTheHardWay() throws IOException, URISyntaxException {
+		var url = new URI("http://localhost:8080/api/quotes").toURL();
+		var is = url.openConnection().getInputStream();
+		var br = new BufferedReader(new InputStreamReader(is));
+		String line;
+		while ((line = br.readLine()) != null) {
+			System.out.println(line);
+		}
+	}
 
-    public List<Quote> getQuotes() {
-        return ClientBuilder.newClient(new ClientConfig()) //
-                .target(SERVER).path("api/quotes") //
-                .request(APPLICATION_JSON) //
-                .accept(APPLICATION_JSON) //
+	public List<Quote> getQuotes() {
+		return ClientBuilder.newClient(new ClientConfig()) //
+				.target(SERVER).path("api/quotes") //
+				.request(APPLICATION_JSON) //
+				.accept(APPLICATION_JSON) //
                 .get(new GenericType<List<Quote>>() {});
-    }
+	}
 
-    public Quote addQuote(Quote quote) {
-        return ClientBuilder.newClient(new ClientConfig()) //
-                .target(SERVER).path("api/quotes") //
-                .request(APPLICATION_JSON) //
-                .accept(APPLICATION_JSON) //
-                .post(Entity.entity(quote, APPLICATION_JSON), Quote.class);
-    }
+	public Quote addQuote(Quote quote) {
+		return ClientBuilder.newClient(new ClientConfig()) //
+				.target(SERVER).path("api/quotes") //
+				.request(APPLICATION_JSON) //
+				.accept(APPLICATION_JSON) //
+				.post(Entity.entity(quote, APPLICATION_JSON), Quote.class);
+	}
 }
